Fix tooltip spacing 🐛

--- a/src/components/SocialNetworkIcons/styles.scss
+++ b/src/components/SocialNetworkIcons/styles.scss
@@ -24,6 +24,8 @@
 
   width: 5rem;
 
+  padding: $spc-s;
+
   position: absolute;
   top: -#{$spc-xl};
   left: -1.5rem;
@@ -34,7 +36,6 @@
 
   font-size: 0.8rem;
   font-weight: bold;
-  color: $dark;
   color: $white;
   border-radius: $radius-small;
 
